--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Data Visulization</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src = "script.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class= "south_campus_img">
         <img id= "main_img" src= "/Users/caden/SU_Work/SU_energy_model/zoomed_south_campus.jpg">
-        <img id= "top_building" src= /Users/caden/SU_Work/SU_energy_model/top_building.png>
+        <div id= "top_building"></div>
+        <div id="popup1">lorem issup datat fhjpfkjhlhjkflkjfh; shjklfkjfkhdkj</div>
+        <div id= "bottom_building"></div>
+        <div id="popup2">lorem issup datat fhjpfkjhlhjkflkjfh; shjklfkjfkhdkj</div>
     </div>
    
 </body>
