--- a/index.html
+++ b/index.html
@@ -11,9 +11,55 @@
     <div class= "south_campus_img">
         <img id= "main_img" src= "/Users/caden/SU_Work/SU_energy_model/zoomed_south_campus.jpg">
         <div id= "top_building"></div>
-        <div id="popup1">lorem issup datat fhjpfkjhlhjkflkjfh; shjklfkjfkhdkj</div>
+        <div id="popup1">
+            <table id = "table1">
+                <tr>
+                    <th></th>
+                    <th>Before Retrofit</th>
+                    <th>After Retrofit</th>
+                </tr>
+                <tr>
+                    <td>Energy Use Intensity (EUI)</td>
+                    <td>33.7 kBTU/ft2/year</td>
+                    <td>7.43 kBTU/ft2/year</td>
+                </tr>
+                <tr>
+                    <td>Indoor Air Quality (IAQ)</td>
+                    <td>>1100 ppm of CO2</td>
+                    <td> &#60;800 ppm of CO2</td>
+                </tr>
+                <tr>
+                    <td>Comfort</td>
+                    <td>Poor</td>
+                    <td>Excellent</td>
+                </tr>
+            </table>
+        </div>
         <div id= "bottom_building"></div>
-        <div id="popup2">lorem issup datat fhjpfkjhlhjkflkjfh; shjklfkjfkhdkj</div>
+        <div id="popup2">
+            <table id = "table2">
+                <tr>
+                    <th></th>
+                    <th>Before Retrofit</th>
+                    <th>After Retrofit</th>
+                </tr>
+                <tr>
+                    <td>Energy Use Intensity (EUI)</td>
+                    <td>33.7 kBTU/ft2/year</td>
+                    <td>7.43 kBTU/ft2/year</td>
+                </tr>
+                <tr>
+                    <td>Indoor Air Quality (IAQ)</td>
+                    <td>>1100 ppm of CO2</td>
+                    <td> &#60;800 ppm of CO2</td>
+                </tr>
+                <tr>
+                    <td>Comfort</td>
+                    <td>Poor</td>
+                    <td>Excellent</td>
+                </tr>
+            </table>
+        </div>
     </div>
    
 </body>
