--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 </tr>
             </table>
         </div>
-        <button id= "bef_but">Before Retrofit</button>
-        <button id= "aft_but">After Retrofit</button>
-        <svg id="circle1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 250" width="250" height="250">
-            <circle cx="100" cy="100" r="50" fill="#F9975D">
-                <animate attributeName="r" values="20; 40; 60; 20;" dur="7s" repeatCount="indefinite" />
+        <button id= "bef_but" onclick="before()">Before Retrofit</button>
+        <button id= "aft_but" onclick="after()">After Retrofit</button>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 250" width="100%" height="100%">
+            <circle id="circle1" cx="-30" cy="30" fill="#F9975D">
+                <animate attributeName="r" values="2.5%; 5%; 10%; 2.4%;" dur="7s" repeatCount="indefinite" />
             </circle>
         </svg>
         
