--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             </circle>
         </svg>
         <img id= "EUI" src= "/Users/caden/SU_Work/SU_energy_model/EUI_bar.png">
+        <img id= "authors" src= "/Users/caden/SU_Work/SU_energy_model/authors.png">
     </div>
    
 </body>
