--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
     <div class= "south_campus_img">
-        <img id= "main_img" src= "/Users/caden/SU_Work/SU_energy_model/zoomed_south_campus.jpg">
+        <img id= "main_img" src= "https://i.imgur.com/m1wQgJr.jpg">
         <div id= "top_building"></div>
         <div id="popup1">
             <table id = "table1">
@@ -164,8 +163,8 @@
                 <animate attributeName="r" values="3.25%; 6.3%; 12.6%; 3.15%;" dur="8.6s" repeatCount="indefinite" />
             </circle>
         </svg>
-        <img id= "EUI" src= "/Users/caden/SU_Work/SU_energy_model/EUI_bar.png">
-        <img id= "authors" src= "/Users/caden/SU_Work/SU_energy_model/authors.png">
+        <img id= "EUI" src= "https://i.imgur.com/miK3J1f.png">
+        <img id= "authors" src= "https://i.imgur.com/aPteshC.png">
     </div>
    
 </body>
