Unified building highlights

--- a/index.html
+++ b/index.html
@@ -10,34 +10,8 @@
 <body>
     <div class= "south_campus_img">
         <img id= "main_img" src= "https://i.imgur.com/m1wQgJr.jpg">
-        <div id= "top_building"></div>
-        <div id="popup1">
-            <table id = "table1">
-                <tr>
-                    <th></th>
-                    <th>Before Retrofit</th>
-                    <th>After Retrofit</th>
-                </tr>
-                <tr>
-                    <td>Energy Use Intensity (EUI)</td>
-                    <td>33.7 kBTU/ft2/year</td>
-                    <td>7.43 kBTU/ft2/year</td>
-                </tr>
-                <tr>
-                    <td>Indoor Air Quality (IAQ)</td>
-                    <td>>1100 ppm of CO2</td>
-                    <td> &#60;800 ppm of CO2</td>
-                </tr>
-                <tr>
-                    <td>Comfort</td>
-                    <td>Poor</td>
-                    <td>Excellent</td>
-                </tr>
-            </table>
-        </div>
-        <div id= "bottom_building"></div>
-        <div id="popup2">
-            <table id = "table2">
+        <div id="popup">
+            <table id = "table">
                 <tr>
                     <th></th>
                     <th>Before Retrofit</th>
@@ -128,6 +102,8 @@
               <polygon class= "rectangle" id = "polygon23" points= "160.1, 227.6 193.8, 221.9 194.3, 223.4 211.4, 220.5 214.7, 230.0 197.6, 232.9 197.2, 231.9 163.5, 237.6" fill = "url('#myGradientBefPoor')" />
               <polygon class= "rectangle" id = "polygon24" points= "271.7, 183.0 281.7, 182.1 287.9, 206.3 286.9, 206.3 290.2, 219.6 279.3, 220.0 276.0, 207.2 277.4, 206.3" fill = "url('#myGradientBefPoor')" />
               <polygon class= "rectangle" id = "polygon25" points= "231.3, 170.7 242.3, 170.3 247.4, 196.2 236.4, 197.0" fill = "url('#myGradientBefMild')" />
+              <polygon class= "rectangle" id = "polygon26" points= "-34.8, 210.6 -36.5, 202.9 -1.7, 194.9 0.4, 202.9 " fill = "url('#myGradientBefMild')" />
+              <polygon class= "rectangle" id = "polygon27" points= "1.6, 211.4 36.4, 203.4 39.8, 211.4 3.8, 219.9  " fill = "url('#myGradientBefMild')" />
             </svg>
         
         <img id= "EUI" src= "https://i.imgur.com/2uD2K8V.png">
