--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
         <button id= "EUI_but" onclick="eui()">Energy Use Intensity</button>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 250" width="75.2%" height="100%" id = "svgDoc">
             <defs>
+                <pattern id="iaqAftExcellent" patternUnits="userSpaceOnUse" width="40" height="40">
+                    <image href="https://gistcdn.githack.com/cadbia/83002c87eb4445786e214573749daf64/raw/53372c09f29494b7d6254689ba28962d59e4c23b/iaqAftExcellent.svg" x="0" y="0" width="40" height="40" />
+                </pattern>
+                <pattern id="iaqAftGood" patternUnits="userSpaceOnUse" width="40" height="40">
+                    <image href="https://gistcdn.githack.com/cadbia/27fe22f51bb45f1fa5fef5384b4c8b06/raw/8b11e5f8fed281d200b2b63ab8da49509e091f69/iaqAftGood.svg" x="0" y="0" width="40" height="40" />
+                </pattern>
+                <pattern id="iaqBefMild" patternUnits="userSpaceOnUse" width="40" height="40">
+                    <image href="https://gistcdn.githack.com/cadbia/dd96bdf721f881b39fc0a8d16892117a/raw/5672b0712e229344e5a28ddce73926faddf67299/iaqBefMild.svg" x="0" y="0" width="40" height="40" />
+                </pattern>
+                <pattern id="iaqBefPoor" patternUnits="userSpaceOnUse" width="40" height="40">
+                    <image href="https://gistcdn.githack.com/cadbia/f9ff7deb20aeb3ed2a31d3078cce2a28/raw/373c338867fb62f9cce04d6fa764dff512f9f0c4/iaqBefPoor.svg" x="0" y="0" width="40" height="40" />
+                </pattern>
                 <pattern id="comfortBefPoor" patternUnits="userSpaceOnUse" width="104" height="25">
                     <image href="https://gistcdn.githack.com/cadbia/7e8af1b4a705941c66c11f67d0df489a/raw/a2337a9d85b5034c812514150cb8f248c4c759f6/redComfortParticles.svg" x="0" y="0" width="104" height="25" />
                 </pattern>
